# textexpander

./: README.md  text_expander.py  text_expander_data.db  text_expander_data.json  update_installer.pyw
.github/workflows/: release.yml
_internal/: text_expander_data.db  update_installer.pyw
_internal/numpy-2.2.4.dist-info/: RECORD
expandly-4.0.0/: .gitignore  index.html  notes.md  package-lock.json  package.json  splash.html
expandly-4.0.0/.github/workflows/: release.yml
expandly-4.0.0/public/: splash.html
expandly-4.0.0/scripts/: setup.js
expandly-4.0.0/src/: App.jsx  main.jsx
expandly-4.0.0/src-tauri/: Cargo.toml  tauri.conf.json
expandly-4.0.0/src-tauri/icons/: icon.icns
expandly-4.0.0/src-tauri/os-icons/: icon.icns
expandly-4.0.0/src-tauri/src/: backup.rs  db.rs  engine.rs  helpers.rs  lib.rs  logger.rs  models.rs
expandly-4.0.0/src-tauri/src/commands/: config.rs  hotkeys.rs  mod.rs  settings.rs  snippets.rs  stats.rs  system.rs  triggers.rs  variables.rs
expandly-4.0.0/src-tauri/src/engine/: injection.rs  keys.rs  mod.rs  sound.rs  stats.rs  variables.rs
expandly-4.0.0/src/components/: ConfirmModal.jsx  Logo.jsx  Modal.jsx  Sidebar.jsx  Toggle.jsx
expandly-4.0.0/src/hooks/: useConfig.js  useInvoke.js
expandly-4.0.0/src/pages/: About.jsx  Dashboard.jsx  Hotkeys.jsx  Settings.jsx  Snippets.jsx  Triggers.jsx  Variables.jsx
textexpander-4.0.0/: .gitignore  index.html  package-lock.json  package.json
textexpander-4.0.0/scripts/: setup.js
textexpander-4.0.0/src/: App.jsx  index.css  main.jsx
textexpander-4.0.0/src-tauri/: Cargo.toml  tauri.conf.json
textexpander-4.0.0/src-tauri/src/: engine.rs  lib.rs  models.rs
textexpander-4.0.0/src/components/: Sidebar.jsx
textexpander-4.0.0/src/pages/: About.jsx  Credits.jsx  Dashboard.jsx  Hotkeys.jsx  Settings.jsx  Triggers.jsx  Updates.jsx
(+6 files in other folders)
