[package]
name = "expandly"
version = "4.0.0" 
description = "Expandly - previously known as TextExpander"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde                        = { version = "1",      features = ["derive"] }
serde_json                   = "1"
log                          = "0.4"
tauri                        = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log             = "2"
tauri-plugin-global-shortcut = "2"
uuid                         = { version = "1",      features = ["v4"] }
rdev                         = "0.5"
enigo                        = "0.2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
rodio = { version = "0.17", features = ["mp3", "wav"] }
open = "5"
ureq = "2"
