[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde                        = { version = "1",      features = ["derive"] }
serde_json                   = "1"
log                          = "0.4"
tauri                        = { version = "2.10.3", features = [] }
tauri-plugin-log             = "2"
tauri-plugin-global-shortcut = "2"
uuid                         = { version = "1",      features = ["v4"] }
rdev                         = "0.5"
enigo                        = "0.2"
